[package]
name = "keyrock_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
solana-client = "2.0.6"
solana-sdk = "2.0.6"
solana-account-decoder = "2.0.6"
spl-token = "6.0.0"
serde_json = "1.0.125"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
rust-bybit = "0.2"
futures = "0.3.30"
tokio-tungstenite = "*"
url = "2.5.0"
serde = "1.0.209"
